增强文档生成与缓存管理功能
- 在文档生成器中新增表关系图文档生成支持，支持Mermaid格式
- 批量生成多个表的文档功能
- 导出表结构或数据为Excel格式的功能
- 新增查询缓存管理功能，包括获取缓存统计信息和清空缓存
- 更新README文档，详细描述新增功能和使用方法

修复原因:
- 提升用户体验，提供更全面的文档生成和缓存管理功能，便于数据库管理和分析

--- a/.gitignore
+++ b/.gitignore
@@ -97,19 +97,7 @@ config.local.py
 
 # 用户生成的文档（运行时生成）
 # ------------------------------------------------
-docs/*_20*.md
-docs/*_20*.json
-docs/*_20*.sql
-docs/SYSDBA_*.md
-docs/TEST_*.md
-docs/USER_*.md
-docs/*数据库概览*.md
-
-# 但保留示例和说明文档
-!docs/README.md
-!docs/*说明*.md
-!docs/*示例*.md
-!docs/*规划*.md
+docs/
 
 # 修复记录文件（这些是开发过程产生的）
 # ------------------------------------------------
@@ -183,11 +171,4 @@ dm_logs/
 *.dmp
 *.ctl
 *.arc 
-database.py
-student/00-core-rules.md
-student/01-frontend-rules.md
-student/02-backend-rules.md
-student/4
-student/5
-student/6
-student/GZW2.0表二多年度表创建.md
+student/
